Input_server: fix archiving of input method replicants

- Make sure the archive contains the replicant pop-up menu
- Make sure said menu is properly re-targetted when instanciating

Fixes #13138

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>